feat: add management server monitoring to overview
